<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_hauki"
        android:title="@string/action_hauki"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ahven"
        android:title="@string/action_ahven"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_kuha"
        android:title="@string/action_kuha"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_siika"
        android:title="@string/action_siika" />
    <item
        android:id="@+id/action_sayne"
        android:title="@string/action_sayne" />
    <item
        android:id="@+id/action_kiiski"
        android:title="Kiiski"/>
    <item
        android:id="@+id/action_lahna"
        android:title="Lahna" />
    <item
        android:id="@+id/action_made"
        android:title="Made" />
    <item
        android:id="@+id/action_muikku"
        android:title="Muikku" />
    <item
        android:id="@+id/action_silakka"
        android:title="Silakka" />
    <item
        android:id="@+id/action_särki"
        android:title="Särki" />
    <item
        android:id="@+id/action_taimen"
        android:title="Taimen" />

</menu>